<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context="com.oit.lotspot.activity.ProfileActivity">

    <include android:id="@+id/clToolbar"
             layout="@layout/layout_toolbar"/>

    <View
            android:id="@+id/viewShadow"
            android:layout_width="0dp"
            android:layout_height="@dimen/_4sdp"
            android:background="@drawable/drawable_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clToolbar"/>

    <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:textSize="@dimen/_13ssp"
            android:text="@string/name"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/colorTextBlack"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clToolbar"/>

    <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/name_hint"
            android:textSize="@dimen/_13ssp"
            android:enabled="false"
            android:textColor="@color/colorSpinnerText"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:padding="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@drawable/background_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"/>

    <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:textSize="@dimen/_13ssp"
            android:text="@string/email"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/colorTextBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"/>

    <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/email_hint"
            android:textSize="@dimen/_13ssp"
            android:enabled="false"
            android:textColor="@color/colorSpinnerText"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:padding="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@drawable/background_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"/>

    <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:textSize="@dimen/_13ssp"
            android:text="@string/phone_number"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/colorTextBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail"/>

    <EditText
            android:id="@+id/etPhone"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/phone_number_hint"
            android:textSize="@dimen/_13ssp"
            android:enabled="false"
            android:textColor="@color/colorSpinnerText"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:padding="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@drawable/background_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhone"/>

    <TextView
            android:id="@+id/tvReferralCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:textSize="@dimen/_13ssp"
            android:text="@string/referral_earns"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/colorTextBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPhone"/>

    <EditText
            android:id="@+id/etReferralCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/_13ssp"
            android:enabled="false"
            android:textColor="@color/colorBrown"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@drawable/background_edit_text_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReferralCode"/>

    <TextView
            android:id="@+id/tvReferralEarn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:textSize="@dimen/_13ssp"
            android:text="@string/referral_earns"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/colorTextBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etReferralCode"/>

    <EditText
            android:id="@+id/etReferralEarn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/_13ssp"
            android:enabled="false"
            android:textColor="@color/colorBrown"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@drawable/background_edit_text_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReferralEarn"/>

</android.support.constraint.ConstraintLayout>
