<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:id="@+id/rootLayout">

    <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lotspot"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"/>

    <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center_vertical|start"
            android:paddingStart="@dimen/_13sdp"
            android:paddingEnd="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UnusedAttribute">

        <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_user"/>


        <TextView
                android:id="@+id/tvProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp"
                android:text="@string/profile"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="@dimen/_6sdp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/llManifest"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_vertical|start"
            android:paddingStart="@dimen/_13sdp"
            android:paddingEnd="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@id/llProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UnusedAttribute">

        <ImageView
                android:id="@+id/ivManifest"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_manifest"/>


        <TextView
                android:id="@+id/tvManifest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp"
                android:text="@string/manifest_title"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="@dimen/_6sdp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/llPolicy"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_vertical|start"
            android:paddingStart="@dimen/_13sdp"
            android:paddingEnd="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@id/llManifest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UnusedAttribute">

        <ImageView
                android:id="@+id/ivPolicy"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/privacy"/>


        <TextView
                android:id="@+id/tvPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp"
                android:text="@string/text_privacy"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="@dimen/_6sdp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/llTerms"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_vertical|start"
            android:paddingStart="@dimen/_13sdp"
            android:paddingEnd="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@id/llPolicy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UnusedAttribute">

        <ImageView
                android:id="@+id/ivTerms"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/terms"/>


        <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp"
                android:text="@string/text_terms_condition"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="@dimen/_6sdp"/>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/clLogout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:id="@+id/llLogout"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical|start"
                android:paddingStart="@dimen/_13sdp"
                android:paddingEnd="@dimen/_13sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="UnusedAttribute">

            <ImageView
                    android:id="@+id/ivLogout"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_logout"/>

            <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/text_logout"
                    android:layout_marginStart="@dimen/_6sdp"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>